<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Viewer.MainActivity">


    <Button
        android:id="@+id/plan_button"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="125dp"
        android:layout_height="54dp"
        android:background="@android:color/holo_green_dark"
        android:backgroundTint="#8BC34A"
        android:fontFamily="monospace"
        android:onClick="onPlanButtonClicked"
        android:text="plan"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <TextView
        android:id="@+id/added_text"
        android:layout_width="232dp"
        android:layout_height="37dp"
        android:layout_marginStart="72dp"
        android:fontFamily="monospace"
        android:paddingTop="4pt"
        android:text="PLANNED ANIMALS"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/added_counter"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:fontFamily="monospace"
        android:paddingTop="4pt"
        android:text="(0)"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/added_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/planned_animals"
        android:layout_width="386dp"
        android:layout_height="489dp"
        android:paddingTop="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/added_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="125dp"
        android:layout_height="54dp"
        android:background="@android:color/holo_green_dark"
        android:backgroundTint="#8BC34A"
        android:fontFamily="monospace"
        android:text="CLEAR"
        android:onClick="onClearButtonClicked"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />


</androidx.constraintlayout.widget.ConstraintLayout>